Using fixed position on footer in signup page so it doesn't jump up when the keyboard appears.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,7 +271,7 @@ label {
 /* Footer - Sign Up */
 
 .footer-section-signup {
-    position:absolute;
+    position:fixed;
     text-align:center;
     bottom:0px;
 }
